--- a/templates/template.html
+++ b/templates/template.html
@@ -121,7 +121,7 @@
                 <div class="card text-white bg-danger mb-3 h-100 shadow">
                     <div class="card-body d-flex align-items-center justify-content-between">
                         <div>
-                            <h5 class="card-title text-uppercase fw-bold">Empréstimos Vencidos</h5>
+                            <h5 class="card-title text-uppercase fw-bold">Retorno Vencidos</h5>
                             <p class="card-text fs-2">12</p>
                         </div>
                         <i class="fas fa-exclamation-triangle card-icon"></i>
